The profile page already exists: you can see your Favorite Tours displayed. Also, the Favorite button was added to each tour card: for non-registered users is not going to show selected, but when registered, if is on your Favorit List then the button would be filled. If a non-registered user press it, a modal would pop up saying to log in or register first. Still need to be added the functionality of adding/removing it from the Wished List after pressing it.

--- a/src/fonts/stylesheets.css
+++ b/src/fonts/stylesheets.css
@@ -3,7 +3,7 @@
     /*src: url('SpaceX.ttf') format('ttf');*/
     src: url('SpaceX.eot'); /* IE9 Compat Modes */
     src: url('SpaceX.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('SpaceX.woff') format('woff'), /* Modern Browsers */
+         /*url('SpaceX.woff') format('woff'), /* Modern Browsers */
          url('SpaceX.ttf')  format('truetype'), /* Safari, Android, iOS */
          url('SpaceX.svg#svgFontName') format('svg');
 }
